do_iterative_fd_io(): * When do_iterative_fd_io_iterate() fails, we must not invoke the   supplied finished hook explicitly, since it is invoked indirectly by   request->SetStatusAndNotify() anyway. Should fix #2557. * We must detach the descriptor putter as soon as we have adjusted the   request's finished callback, since that will put the descriptor.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@26776 a95241bf-73f2-0310-859d-f6bbb57e9c96